--- a/box2/task3css.css
+++ b/box2/task3css.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(152, 138, 242);
-    padding-top: 60px; /* Отступ для фиксированного заголовка */
+    padding-top: 120px; /* Отступ для фиксированного заголовка */
 
 }
 .top{
@@ -11,6 +11,7 @@ body {
 
 h1 {
   font-size: 40px;
+  margin: 20px;
   text-shadow:
     1px 1px 1px rgb(31, 4, 241),
     -1px 1px 1px rgb(31, 4, 241);
@@ -23,6 +24,10 @@ h1:hover {
     -1px -1px 1px rgb(5, 245, 0),
     1px -1px 1px rgb(5, 245, 0);
   color: white;
+}
+h2 {
+  font-size: 35px;
+  margin: 20px;
 }
 .header a {
     text-decoration: none;
